2009-01-18  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/posix.vapi:

	Add stub POSIX binding

2009-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Accept `params' as identifier after cast parentheses

2009-01-18  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix sincos binding, patch by Jukka-Pekka Iivonen, fixes bug 568038

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodcallmodule.vala:

	Fix crash when using lambda expressions with owned delegate
	parameters, fixes bug 566344

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaenumvalue.vala:
	* vala/valasourcefile.vala:

	Add missing include for enum values, fixes bug 531724

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaconstant.vala:
	* vala/valafield.vala:

	Fix symbol lookup in constant and field initializers,
	fixes bug 567760

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedelegatemodule.vala:

	Fix wrapper for delegates returning arrays, fixes bug 564474

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/lua.vapi:

	Add Lua binding, patch by pancake and Phil Housley,
	fixes bug 540820

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	Fix delegate bindings, patch by Matías De la Puente

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Parse callback parameter annotations

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valamarkupreader.vala:

	Fix infinite loop when reading entity references

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valamarkupreader.vala:

	Read comments

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_widget_create_pango_* bindings

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaobjectcreationexpression.vala:

	Set formal_target_type to fix constructors using generic parameter
	types, fixes bug 543477

2009-01-17  Jürg Billeter  <j@bitron.ch>
